# kasicass

./: .gitignore  README
3dmax/: README
3dmax/001_ExporterFramework/: README
3dmax/002_ExportVertexXYZ/: README
3dmax/003_ExportVertexUV/: README
3dmax/OpenGex-Max9/: OpenGex-Max.cpp  OpenGex-Max.def  OpenGex-Max.h  OpenGex-Max9.sln  OpenGex-Max9.vcxproj  OpenGex-Max9.vcxproj.filters
3dmodel/: readme.txt
3dmodel/md5/: boblampclean.md5mesh
AsyncNet/: readme.txt
AsyncNet/boss_system/: boss_command.py  boss_config.py  boss_daemon.py  boss_logger.py  boss_network.py  readme.txt
AsyncNet/hello_core/: MyClient.py  MyServer.py
AsyncNet/hello_echo/: EchoServer.py
AsyncNet/hello_notify/: MyNode1.py  MyNode2.py
AsyncNet/hello_rpc/: MyRpcClient.py  MyRpcServer.py
AsyncNet/hello_rpc2/: MyRpcClient2.py  MyRpcServer2.py
Qt/PyQt4/: StringListDlg.py  converter.pyw  interest.pyw
SDL2/testgui/: Makefile
akka.net/echosvr/: Actors.cs  Program.cs  echosvr.csproj
android/HelloJNI/: AndroidManifest.xml  local.properties
android/LifeCycle/: AndroidManifest.xml  build.xml
avro/pt/: README
books/article/: VC环境配置手册.doc  (+1 more)
buildsystem/cmake/07_subdirectory/: CMakeLists.txt
buildsystem/cmake/07_subdirectory/include/: student.h
buildsystem/cmake/07_subdirectory/src/: main.cpp  student.cpp
buildsystem/cmake/09_multi_lib/src/hellolib/: CMakeLists.txt  hello.cpp  hello.hpp
k1renderer/: README  TODO  cleanup.bat
ncurses/: 01-hello.c  02-init.c  03-printw.c
protobuf/: addressbook.proto  testme.py
shaderx/: README  cleanup.bat
zmq/: test.c
(+1768 files in other folders)
